TS-4626: LogFile::close_file should not delete m_log handle

LogFile::close_file was incorrectly deleting the m_log object.
This caused potential race conditions when flushing m_log since
there aren't any locks protecting m_log accesses.

When the underlying log file on disk is deleted, it is fine to
not delete m_log. It's fine because the actual flush function
in Log::flush_thread_main checks to see if m_log is open before
doing any writes.